infra/modules/network/eip.tf
resource "aws_eip" "nateip" {
  count  = length(var.azs)
  domain = "vpc"
  tags   = merge(var.COMMON_TAGS, tomap({"Name"= format("${var.ENV}-${var.PROJECT_NAME}-eip-%s", element(var.azs, count.index))}))
}
